--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
+  
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="style.css">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <section class="container" id="damier">
 
+    <div class="row">
+      <table>
+      <tbody class="tableau" id="tableau">
+
+        </tbody>
+      </table>
+    </div>
 
     
   </section>
